# sqlalchemy-auth-hooks

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
sqlalchemy_auth_hooks/: auth_handler.py  authorization.py  clauses.py  common_hooks.py  conditions.py  core_hooks.py  events.py  handler.py  hooks.py  orm_hooks.py  post_auth_handler.py  references.py  session.py  utils.py
sqlalchemy_auth_hooks/oso/: __init__.py  oso_handler.py
sqlalchemy_auth_hooks/oso/sqlalchemy_oso/: NOTICE  auth.py  compat.py  partial.py  preprocess.py
tests/: conftest.py  test_core_update.py  test_orm_create.py  test_orm_delete.py  test_orm_select.py  test_orm_select_join.py  test_orm_update.py
tests/core/: conftest.py  test_core_after_create.py  test_core_after_delete.py  test_core_after_insert.py  test_core_after_update.py  test_core_delete.py  test_core_insert.py  test_core_select.py  test_core_select_join.py  test_core_update.py  test_orm_after_create.py  test_orm_after_delete.py  test_orm_after_insert.py  test_orm_after_update.py  test_orm_create.py  test_orm_delete.py  test_orm_insert.py  test_orm_select.py  test_orm_select_join.py  test_orm_update.py
tests/oso/: conftest.py  test_integration.py
tests/oso/assets/: authorization.polar
tests/sqlalchemy_oso/: conftest.py  duplicate_model.py  models.py  test_duplicate_models.py  test_partial.py  test_post_relationships.py  test_preprocess.py
typings/oso/: __init__.pyi  exceptions.pyi  oso.pyi
typings/polar/: __init__.pyi  build.pyi  data_filtering.pyi  errors.pyi  exceptions.pyi  expression.pyi  ffi.pyi  host.pyi  partial.pyi  polar.pyi  predicate.pyi  query.pyi  variable.pyi
typings/polar/data/: __init__.pyi  filter.pyi
typings/polar/data/adapter/: __init__.pyi  adapter.pyi
